; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bnxt/extr_if_bnxt.c_bnxt_alloc_hwrm_short_cmd_req.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bnxt/extr_if_bnxt.c_bnxt_alloc_hwrm_short_cmd_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt_softc = type { i32, i32, i32 }

@BUS_DMA_NOWAIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnxt_softc*)* @bnxt_alloc_hwrm_short_cmd_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnxt_alloc_hwrm_short_cmd_req(%struct.bnxt_softc* %0) #0 {
  %2 = alloca %struct.bnxt_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.bnxt_softc* %0, %struct.bnxt_softc** %2, align 8
  %4 = load %struct.bnxt_softc*, %struct.bnxt_softc** %2, align 8
  %5 = getelementptr inbounds %struct.bnxt_softc, %struct.bnxt_softc* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.bnxt_softc*, %struct.bnxt_softc** %2, align 8
  %8 = getelementptr inbounds %struct.bnxt_softc, %struct.bnxt_softc* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.bnxt_softc*, %struct.bnxt_softc** %2, align 8
  %11 = getelementptr inbounds %struct.bnxt_softc, %struct.bnxt_softc* %10, i32 0, i32 0
  %12 = load i32, i32* @BUS_DMA_NOWAIT, align 4
  %13 = call i32 @iflib_dma_alloc(i32 %6, i32 %9, i32* %11, i32 %12)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @iflib_dma_alloc(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
